@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2019, 2025, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2019, 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -26,10 +26,11 @@ package jdk.graal.compiler.hotspot.test;
 
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Properties;
+import java.util.Random;
 
 import org.junit.Assert;
 import org.junit.Test;
@@ -41,47 +42,30 @@ import org.junit.runners.Parameterized.Parameters;
 import jdk.graal.compiler.core.test.GraalCompilerTest;
 import jdk.graal.compiler.hotspot.JVMCIVersionCheck;
 import jdk.graal.compiler.hotspot.JVMCIVersionCheck.Version;
-import jdk.graal.compiler.util.CollectionsUtil;
-import jdk.graal.compiler.util.EconomicHashMap;
 
 @RunWith(Parameterized.class)
 public class JVMCIVersionCheckTest extends GraalCompilerTest {
 
     private static final String[] JDK_VERSIONS = {
-                    "99",
-                    "99+3",
-                    "99.0.1+3",
-                    "99-ea+11-790"
-    };
-    private static final String[] RELEASE_NAMES = {
                     null,
-                    "25.1",
-                    "25.2",
-                    "26.1",
-                    "26.2",
-                    "fooRelease",
-                    "barRelease",
-    };
-    private static final int[] JVMCI_BUILD_NUMBERS = {
-                    1,
-                    2,
-                    5,
-                    11,
-                    111
+                    "21",
+                    "21+3",
+                    "21.0.1+3",
+                    "21-ea+11-790"
     };
 
     static final Map<String, String> PROPS;
     static {
         Properties sprops = System.getProperties();
-        Map<String, String> propsLocal = new EconomicHashMap<>(sprops.size());
+        Map<String, String> propsLocal = new HashMap<>(sprops.size());
         for (String name : sprops.stringPropertyNames()) {
             propsLocal.put(name, sprops.getProperty(name));
         }
-        PROPS = Collections.unmodifiableMap(propsLocal);
+        PROPS = Map.copyOf(propsLocal);
     }
 
     static Map<String, String> createTestProperties(String javaSpecVersion, String javaVmVersion, String javaVmVendor) {
-        var props = (Map<String, String>) new EconomicHashMap<>(JVMCIVersionCheckTest.PROPS);
+        var props = new HashMap<>(JVMCIVersionCheckTest.PROPS);
         if (javaSpecVersion != null) {
             props.put("java.specification.version", javaSpecVersion);
         }
@@ -91,23 +75,30 @@ public class JVMCIVersionCheckTest extends GraalCompilerTest {
         if (javaVmVendor != null) {
             props.put("java.vm.vendor", javaVmVendor);
         }
-        return Collections.unmodifiableMap(props);
+        return Map.copyOf(props);
     }
 
     @Parameters(name = "{0} vs {1}")
     public static Collection<Object[]> data() {
         List<Object[]> ret = new ArrayList<>();
+        Random random = getRandomInstance();
 
         for (String minJdkVersion : JDK_VERSIONS) {
             for (String jdkVersion : JDK_VERSIONS) {
-                for (String minReleaseName : RELEASE_NAMES) {
-                    for (String releaseName : RELEASE_NAMES) {
-                        for (int minBuild : JVMCI_BUILD_NUMBERS) {
-                            for (int build : JVMCI_BUILD_NUMBERS) {
-                                Version version = getLabsJDKVersion(jdkVersion, releaseName, build);
-                                Version minVersion = getLabsJDKVersion(minJdkVersion, minReleaseName, minBuild);
-                                ret.add(new Object[]{version, minVersion});
-                            }
+                for (int i = 0; i < (minJdkVersion == null ? 50 : 1); i++) {
+                    int minMajor = i;
+                    int minMinor = 50 - i;
+                    for (int j = 0; j < (jdkVersion == null ? 50 : 1); j++) {
+                        int major = j;
+                        int minor = 50 - j;
+
+                        for (int k = 0; k < 30; k++) {
+                            int minBuild = random.nextInt(100);
+                            int build = random.nextInt(100);
+
+                            Version version = getVersion(jdkVersion, major, minor, build);
+                            Version minVersion = getVersion(minJdkVersion, minMajor, minMinor, minBuild);
+                            ret.add(new Object[]{version, minVersion});
                         }
                     }
                 }
@@ -116,49 +107,43 @@ public class JVMCIVersionCheckTest extends GraalCompilerTest {
         return ret;
     }
 
-    private static Version getLabsJDKVersion(String jdkVersion, String releaseName, int build) {
-        if (releaseName == null) {
-            // legacy version without release name
-            return JVMCIVersionCheck.createLabsJDKVersionUntilGraalVmForJDK25(jdkVersion, build);
+    private static Version getVersion(String jdkVersion, int major, int minor, int build) {
+        if (jdkVersion != null) {
+            // new version scheme
+            return JVMCIVersionCheck.createLabsJDKVersion(jdkVersion, build);
+        } else {
+            // legacy version scheme
+            return JVMCIVersionCheck.createLegacyVersion(major, minor, build);
         }
-        return JVMCIVersionCheck.createLabsJDKVersion(jdkVersion, releaseName, build);
     }
 
     @Parameter(value = 0) public Version version;
     @Parameter(value = 1) public Version minVersion;
 
     @Test
-    public void test00() {
-        test01();
-    }
-
     public void test01() {
-        assert !version.toString().startsWith("jvmci");
-        String javaVmVersion = version.toString(); // + "Suffix";
-        String javaSpecVersion = "99";
+        String legacyPrefix = version.toString().startsWith("jvmci") ? "prefix-" : "";
+        String javaVmVersion = legacyPrefix + version.toString() + "Suffix";
+        String javaSpecVersion = "21";
         var props = createTestProperties(javaSpecVersion, javaVmVersion, null);
-        var jvmciMinVersions = CollectionsUtil.mapOf(
-                        javaSpecVersion, CollectionsUtil.mapOf(JVMCIVersionCheck.DEFAULT_VENDOR_ENTRY, minVersion));
-        try {
-            if (!version.isLessThan(minVersion)) {
-                try {
-                    JVMCIVersionCheck.check(props, false, null, jvmciMinVersions);
-                } catch (InternalError e) {
-                    throw new AssertionError("Failed " + JVMCIVersionCheckTest.class.getSimpleName(), e);
-                }
-            } else {
-                try {
-                    JVMCIVersionCheck.check(props, false, null, jvmciMinVersions);
-                    String value = System.getenv("JVMCI_VERSION_CHECK");
-                    if (!"warn".equals(value) && !"ignore".equals(value)) {
-                        Assert.fail("expected to fail checking " + javaVmVersion + " against " + minVersion);
-                    }
-                } catch (InternalError e) {
-                    // pass
-                }
+        var jvmciMinVersions = Map.of(
+                        javaSpecVersion, Map.of(JVMCIVersionCheck.DEFAULT_VENDOR_ENTRY, minVersion));
+        if (!version.isLessThan(minVersion)) {
+            try {
+                JVMCIVersionCheck.check(props, false, null, jvmciMinVersions);
+            } catch (InternalError e) {
+                throw new AssertionError("Failed " + JVMCIVersionCheckTest.class.getSimpleName(), e);
             }
-        } catch (JVMCIVersionCheck.IncomparableVersionException e) {
-            // pass
+        } else {
+            try {
+                JVMCIVersionCheck.check(props, false, null, jvmciMinVersions);
+                String value = System.getenv("JVMCI_VERSION_CHECK");
+                if (!"warn".equals(value) && !"ignore".equals(value)) {
+                    Assert.fail("expected to fail checking " + javaVmVersion + " against " + minVersion);
+                }
+            } catch (InternalError e) {
+                // pass
+            }
         }
     }
 }
