@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2009, 2025, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2009, 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -32,7 +32,7 @@ import static jdk.vm.ci.code.ValueUtil.isRegister;
 
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.List;
+import java.util.BitSet;
 
 import org.graalvm.collections.Pair;
 
@@ -42,8 +42,6 @@ import jdk.graal.compiler.core.common.alloc.RegisterAllocationConfig;
 import jdk.graal.compiler.core.common.cfg.BasicBlock;
 import jdk.graal.compiler.core.common.cfg.BlockMap;
 import jdk.graal.compiler.debug.Assertions;
-import jdk.graal.compiler.debug.CounterKey;
-import jdk.graal.compiler.debug.DebugCloseable;
 import jdk.graal.compiler.debug.DebugContext;
 import jdk.graal.compiler.debug.GraalError;
 import jdk.graal.compiler.debug.Indent;
@@ -63,6 +61,7 @@ import jdk.graal.compiler.options.OptionKey;
 import jdk.graal.compiler.options.OptionType;
 import jdk.graal.compiler.options.OptionValues;
 import jdk.vm.ci.code.Register;
+import jdk.vm.ci.code.RegisterArray;
 import jdk.vm.ci.code.RegisterAttributes;
 import jdk.vm.ci.code.RegisterValue;
 import jdk.vm.ci.code.TargetDescription;
@@ -76,49 +75,10 @@ import jdk.vm.ci.meta.Value;
  */
 public class LinearScan {
 
-    protected boolean isDetailedAsserts() {
-        return Assertions.assertionsEnabled() && detailedAsserts;
-    }
-
-    /**
-     * These timers can significantly affect the speed of linear scan so they are disabled by
-     * default.
-     */
-    static final boolean DETAILED_TIMERS = false;
-
-    static CounterKey counter(String name) {
-        if (DETAILED_TIMERS) {
-            return DebugContext.counter(name);
-        }
-        return null;
-    }
-
-    static DebugContext.CountingTimerKey countingTimer(String name) {
-        if (DETAILED_TIMERS) {
-            return DebugContext.countingTimer(name);
-        }
-        return null;
-    }
-
-    DebugCloseable start(DebugContext.CountingTimerKey key) {
-        if (key != null) {
-            return key.start(debug);
-        }
-        return null;
-    }
-
-    void increment(CounterKey key) {
-        if (key != null) {
-            key.increment(debug);
-        }
-    }
-
     public static class Options {
         // @formatter:off
         @Option(help = "Enable spill position optimization", type = OptionType.Debug)
         public static final OptionKey<Boolean> LIROptLSRAOptimizeSpillPosition = new NestedBooleanOptionKey(LIRPhase.Options.LIROptimization, true);
-        @Option(help = "Use binary search if interval is longer than this limit", type = OptionType.Debug)
-        public static final OptionKey<Integer> IntervalBinarySearchLimit = new OptionKey<>(100);
         // @formatter:on
     }
 
@@ -130,7 +90,7 @@ public class LinearScan {
          * block. The bit index of an operand is its {@linkplain LinearScan#operandNumber(Value)
          * operand number}.
          */
-        public SparseBitSet liveIn;
+        public BitSet liveIn;
 
         /**
          * Bit map specifying which operands are live upon exit from this block. These are values
@@ -138,26 +98,20 @@ public class LinearScan {
          * to this block. The bit index of an operand is its
          * {@linkplain LinearScan#operandNumber(Value) operand number}.
          */
-        public SparseBitSet liveOut;
+        public BitSet liveOut;
 
         /**
          * Bit map specifying which operands are used (before being defined) in this block. That is,
          * these are the values that are live upon entry to the block. The bit index of an operand
          * is its {@linkplain LinearScan#operandNumber(Value) operand number}.
          */
-        public SparseBitSet liveGen;
+        public BitSet liveGen;
 
         /**
          * Bit map specifying which operands are defined/overwritten in this block. The bit index of
          * an operand is its {@linkplain LinearScan#operandNumber(Value) operand number}.
          */
-        public SparseBitSet liveKill;
-
-        /**
-         * State used during {@link LinearScanLifetimeAnalysisPhase#computeGlobalLiveSets()} to
-         * create a worklist.
-         */
-        boolean dirty = true;
+        public BitSet liveKill;
     }
 
     public static final int DOMINATOR_SPILL_MOVE_ID = -2;
@@ -171,8 +125,8 @@ public class LinearScan {
 
     private final LIR ir;
     private final FrameMapBuilder frameMapBuilder;
-    private final List<RegisterAttributes> registerAttributes;
-    private final List<Register> registers;
+    private final RegisterAttributes[] registerAttributes;
+    private final RegisterArray registers;
     private final RegisterAllocationConfig regAllocConfig;
     private final MoveFactory moveFactory;
 
@@ -206,14 +160,14 @@ public class LinearScan {
     private Interval[] sortedIntervals;
 
     /**
-     * Map from an instruction {@linkplain LIRInstruction#id() id} to the instruction. Entries
-     * should be retrieved with {@link #instructionForId(int)} as the id is not simply an index into
-     * this array.
+     * Map from an instruction {@linkplain LIRInstruction#id id} to the instruction. Entries should
+     * be retrieved with {@link #instructionForId(int)} as the id is not simply an index into this
+     * array.
      */
     private LIRInstruction[] opIdToInstructionMap;
 
     /**
-     * Map from an instruction {@linkplain LIRInstruction#id() id} to the {@linkplain BasicBlock
+     * Map from an instruction {@linkplain LIRInstruction#id id} to the {@linkplain BasicBlock
      * block} containing the instruction. Entries should be retrieved with {@link #blockForId(int)}
      * as the id is not simply an index into this array.
      */
@@ -233,9 +187,9 @@ public class LinearScan {
      * Sentinel interval to denote the end of an interval list.
      */
     protected final Interval intervalEndMarker;
-    private final boolean detailedAsserts;
+    public final Range rangeEndMarker;
+    public final boolean detailedAsserts;
     private final LIRGenerationResult res;
-    public final int intervalBinarySearchLimit;
 
     @SuppressWarnings("this-escape")
     protected LinearScan(TargetDescription target, LIRGenerationResult res, MoveFactory spillMoveFactory, RegisterAllocationConfig regAllocConfig, int[] sortedBlocks,
@@ -254,10 +208,10 @@ public class LinearScan {
         this.numVariables = ir.numVariables();
         this.blockData = new BlockMap<>(ir.getControlFlowGraph());
         this.neverSpillConstants = neverSpillConstants;
-        this.intervalEndMarker = new Interval(Value.ILLEGAL, Interval.END_MARKER_OPERAND_NUMBER, null);
+        this.rangeEndMarker = new Range(Integer.MAX_VALUE, Integer.MAX_VALUE, null, ir);
+        this.intervalEndMarker = new Interval(ir, Value.ILLEGAL, Interval.END_MARKER_OPERAND_NUMBER, null, rangeEndMarker);
         this.intervalEndMarker.next = intervalEndMarker;
         this.detailedAsserts = Assertions.detailedAssertionsEnabled(ir.getOptions());
-        this.intervalBinarySearchLimit = Options.IntervalBinarySearchLimit.getValue(ir.getOptions());
     }
 
     /**
@@ -268,7 +222,7 @@ public class LinearScan {
      *         describes a register
      */
     public int getVariableNumber(int operand) {
-        // check if it's a variable
+        // check if its a variable
         if (operand >= firstVariableNumber) {
             return operand - firstVariableNumber;
         }
@@ -289,14 +243,14 @@ public class LinearScan {
     }
 
     public int getFirstLirInstructionId(BasicBlock<?> block) {
-        int result = ir.getLIRforBlock(block).getFirst().id();
+        int result = ir.getLIRforBlock(block).get(0).id();
         assert NumUtil.assertNonNegativeInt(result);
         return result;
     }
 
     public int getLastLirInstructionId(BasicBlock<?> block) {
         ArrayList<LIRInstruction> instructions = ir.getLIRforBlock(block);
-        int result = instructions.getLast().id();
+        int result = instructions.get(instructions.size() - 1).id();
         assert NumUtil.assertNonNegativeInt(result);
         return result;
     }
@@ -374,7 +328,7 @@ public class LinearScan {
      * configuration.
      */
     public RegisterAttributes attributes(Register reg) {
-        return registerAttributes.get(reg.number);
+        return registerAttributes[reg.number];
     }
 
     void assignSpillSlot(Interval interval) {
@@ -414,7 +368,7 @@ public class LinearScan {
     Interval createInterval(AllocatableValue operand) {
         assert isLegal(operand);
         int operandNumber = operandNumber(operand);
-        Interval interval = new Interval(operand, operandNumber, intervalEndMarker);
+        Interval interval = new Interval(ir, operand, operandNumber, intervalEndMarker, rangeEndMarker);
         assert operandNumber < intervalsSize : operandNumber + " " + intervalsSize;
         assert intervals[operandNumber] == null;
         intervals[operandNumber] = interval;
@@ -507,7 +461,7 @@ public class LinearScan {
     }
 
     /**
-     * Converts an {@linkplain LIRInstruction#id() instruction id} to an instruction index. All LIR
+     * Converts an {@linkplain LIRInstruction#id instruction id} to an instruction index. All LIR
      * instructions in a method have an index one greater than their linear-scan order predecessor
      * with the first instruction having an index of 0.
      */
@@ -516,10 +470,10 @@ public class LinearScan {
     }
 
     /**
-     * Retrieves the {@link LIRInstruction} based on its {@linkplain LIRInstruction#id() id}.
+     * Retrieves the {@link LIRInstruction} based on its {@linkplain LIRInstruction#id id}.
      *
-     * @param opId an instruction {@linkplain LIRInstruction#id() id}
-     * @return the instruction whose {@linkplain LIRInstruction#id()} {@code == id}
+     * @param opId an instruction {@linkplain LIRInstruction#id id}
+     * @return the instruction whose {@linkplain LIRInstruction#id} {@code == id}
      */
     public LIRInstruction instructionForId(int opId) {
         assert isEven(opId) : "opId not even";
@@ -531,7 +485,7 @@ public class LinearScan {
     /**
      * Gets the block containing a given instruction.
      *
-     * @param opId an instruction {@linkplain LIRInstruction#id() id}
+     * @param opId an instruction {@linkplain LIRInstruction#id id}
      * @return the block containing the instruction denoted by {@code opId}
      */
     public BasicBlock<?> blockForId(int opId) {
@@ -546,7 +500,7 @@ public class LinearScan {
     /**
      * Determines if an {@link LIRInstruction} destroys all caller saved registers.
      *
-     * @param opId an instruction {@linkplain LIRInstruction#id() id}
+     * @param opId an instruction {@linkplain LIRInstruction#id id}
      * @return {@code true} if the instruction denoted by {@code id} destroys all caller saved
      *         registers.
      */
@@ -786,14 +740,14 @@ public class LinearScan {
 
                 sortIntervalsAfterAllocation();
 
-                if (isDetailedAsserts()) {
+                if (detailedAsserts) {
                     verify();
                 }
                 beforeSpillMoveElimination();
                 createSpillMoveEliminationPhase().apply(target, lirGenRes, context);
                 createAssignLocationsPhase().apply(target, lirGenRes, context);
 
-                if (isDetailedAsserts()) {
+                if (detailedAsserts) {
                     verifyIntervals();
                 }
             } catch (Throwable e) {
@@ -901,14 +855,14 @@ public class LinearScan {
                     throw new GraalError("");
                 }
 
-                if (i1.isEmpty()) {
+                if (i1.first().isEndMarker()) {
                     debug.log("Interval %d has no Range", i1.operandNumber);
                     debug.log(i1.logString(this));
                     throw new GraalError("");
                 }
 
-                for (Interval.RangeIterator r = new Interval.RangeIterator(i1); !r.isAtEnd(); r.next()) {
-                    if (r.from() >= r.to()) {
+                for (Range r = i1.first(); !r.isEndMarker(); r = r.next) {
+                    if (r.from >= r.to) {
                         debug.log("Interval %d has zero length range", i1.operandNumber);
                         debug.log(i1.logString(this));
                         throw new GraalError("");
@@ -952,7 +906,7 @@ public class LinearScan {
         return sortedBlocks;
     }
 
-    public List<Register> getRegisters() {
+    public RegisterArray getRegisters() {
         return registers;
     }
 
