@@ -27,12 +27,15 @@ package com.oracle.svm.hosted.substitute;
 import static com.oracle.svm.core.util.VMError.shouldNotReachHere;
 import static com.oracle.svm.core.util.VMError.shouldNotReachHereUnexpectedInput;
 
+import java.lang.annotation.Annotation;
 import java.lang.invoke.MethodHandle;
+import java.lang.reflect.AnnotatedElement;
 import java.lang.reflect.Type;
 import java.util.ArrayList;
 import java.util.List;
 
 import com.oracle.graal.pointsto.infrastructure.GraphProvider;
+import com.oracle.graal.pointsto.infrastructure.OriginalMethodProvider;
 import com.oracle.graal.pointsto.meta.AnalysisMethod;
 import com.oracle.graal.pointsto.meta.HostedProviders;
 import com.oracle.svm.core.invoke.MethodHandleUtils;
@@ -40,8 +43,6 @@ import com.oracle.svm.core.invoke.Target_java_lang_invoke_MemberName;
 import com.oracle.svm.core.util.VMError;
 import com.oracle.svm.hosted.annotation.AnnotationWrapper;
 import com.oracle.svm.hosted.phases.HostedGraphKit;
-import com.oracle.svm.util.AnnotatedWrapper;
-import com.oracle.svm.util.OriginalMethodProvider;
 
 import jdk.graal.compiler.debug.DebugContext;
 import jdk.graal.compiler.nodes.CallTargetNode;
@@ -61,15 +62,13 @@ import jdk.vm.ci.meta.ResolvedJavaMethod;
 import jdk.vm.ci.meta.ResolvedJavaType;
 import jdk.vm.ci.meta.Signature;
 import jdk.vm.ci.meta.SpeculationLog;
-import jdk.vm.ci.meta.annotation.Annotated;
-import jdk.vm.ci.meta.annotation.AnnotationsInfo;
 
 /**
  * Creates a wrapper around a {@link java.lang.invoke.MethodHandle}.PolymorphicSignature method that
  * assembles the arguments into an array, performing necessary boxing operations. The wrapper then
  * transfers execution to the underlying varargs method.
  */
-public class PolymorphicSignatureWrapperMethod implements ResolvedJavaMethod, GraphProvider, AnnotationWrapper, AnnotatedWrapper, OriginalMethodProvider {
+public class PolymorphicSignatureWrapperMethod implements ResolvedJavaMethod, GraphProvider, AnnotationWrapper, OriginalMethodProvider {
 
     private final SubstitutionMethod substitutionBaseMethod;
     private final ResolvedJavaMethod originalMethod;
@@ -96,7 +95,7 @@ public class PolymorphicSignatureWrapperMethod implements ResolvedJavaMethod, Gr
         List<ValueNode> args = new ArrayList<>(kit.getInitialArguments());
         ValueNode receiver = null;
         if (!substitutionBaseMethod.isStatic()) {
-            receiver = args.removeFirst();
+            receiver = args.remove(0);
         }
 
         ValueNode parameterArray = kit.append(new NewArrayNode(kit.getMetaAccess().lookupJavaType(Object.class), kit.createInt(args.size()), true));
@@ -127,9 +126,9 @@ public class PolymorphicSignatureWrapperMethod implements ResolvedJavaMethod, Gr
                  * handle and the bytecode type of the invocation itself (for compatible primitive
                  * types only). For example, int value = mh.invokeBasic(...) where
                  * mh.type().returnType() == short.class.
-                 *
-                 * This doesn't cause trouble in HotSpot since these values can be silently cast to
-                 * the expected type. However, since Native Image handles the return value as a
+                 * 
+                 * This doesn't cause trouble in HotSpot since these values can be silently casted
+                 * to the expected type. However, since Native Image handles the return value as a
                  * boxed object, it needs to explicitly cast it to the required type to avoid tricky
                  * bugs to occur.
                  *
@@ -150,7 +149,7 @@ public class PolymorphicSignatureWrapperMethod implements ResolvedJavaMethod, Gr
                     ValueNode methodHandleOrMemberName;
                     AnalysisMethod unboxMethod;
                     try {
-                        String unboxMethodName = returnKind + "Unbox";
+                        String unboxMethodName = returnKind.toString() + "Unbox";
                         switch (substitutionBaseMethod.getName()) {
                             case "invokeBasic":
                             case "invokeExact":
@@ -163,7 +162,7 @@ public class PolymorphicSignatureWrapperMethod implements ResolvedJavaMethod, Gr
                             case "linkToStatic":
                             case "linkToInterface":
                             case "linkToSpecial":
-                                methodHandleOrMemberName = args.getLast();
+                                methodHandleOrMemberName = args.get(args.size() - 1);
                                 unboxMethod = kit.getMetaAccess().lookupJavaMethod(
                                                 MethodHandleUtils.class.getMethod(unboxMethodName, Object.class, Target_java_lang_invoke_MemberName.class));
                                 break;
@@ -245,11 +244,6 @@ public class PolymorphicSignatureWrapperMethod implements ResolvedJavaMethod, Gr
     }
 
     @Override
-    public boolean isDeclared() {
-        throw VMError.intentionallyUnimplemented(); // ExcludeFromJacocoGeneratedReport
-    }
-
-    @Override
     public boolean isClassInitializer() {
         return false;
     }
@@ -290,6 +284,11 @@ public class PolymorphicSignatureWrapperMethod implements ResolvedJavaMethod, Gr
     @Override
     public ConstantPool getConstantPool() {
         return constantPool;
+    }
+
+    @Override
+    public Annotation[][] getParameterAnnotations() {
+        throw VMError.intentionallyUnimplemented(); // ExcludeFromJacocoGeneratedReport
     }
 
     @Override
@@ -338,22 +337,12 @@ public class PolymorphicSignatureWrapperMethod implements ResolvedJavaMethod, Gr
     }
 
     @Override
-    public Annotated getWrappedAnnotated() {
+    public AnnotatedElement getAnnotationRoot() {
         return substitutionBaseMethod;
     }
 
     @Override
     public int getModifiers() {
         return substitutionBaseMethod.getModifiers();
-    }
-
-    @Override
-    public AnnotationsInfo getParameterAnnotationInfo() {
-        throw VMError.intentionallyUnimplemented(); // ExcludeFromJacocoGeneratedReport
-    }
-
-    @Override
-    public AnnotationsInfo getAnnotationDefaultInfo() {
-        throw VMError.intentionallyUnimplemented(); // ExcludeFromJacocoGeneratedReport
     }
 }
